k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-argocd
spec:
  selector:
    app: fastapi-argocd
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
